samples/_failures_safe/1761517458_358727_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_316e87c6.c: In function ‘main’:
./samples/SAFE/__tmp_316e87c6.c:145:9: error: expected declaration or statement at end of input
  145 |         printf("3. Show INFO entries\n");
      |         ^~~~~~
./samples/SAFE/__tmp_316e87c6.c:145:9: error: expected declaration or statement at end of input
